--- a/templates/posts/post_create.html
+++ b/templates/posts/post_create.html
@@ -1,25 +1,21 @@
 {% extends 'base.html' %}
 {% block content %}
 
-    <h1>Это главная страница</h1>
+    <h1>Создание постов</h1>
     {% for post in posts %}
 
     <div class="card" style="width: 18rem;">
         <div class="card-body">
+          <h1>Создание постов</h1>
           <h5 class="card-title">{{post.title}}</h5>
           <h6 class="card-subtitle mb-2 text-muted">{{ post.created }}</h6>
           <p class="card-text">{{ post.content|truncatewords:10 }}</p>
-          <a href="#" class="card-link">Card link</a>
-          <a href="#" class="card-link">Another link</a>
         </div>
       </div>
       <br>
     {% endfor %}
     <br>
     <a href="{% url 'about-view' %}">Страница о нас</a> <br>
-    <a href="{% url 'contacts-view' %}">Контакты</a><br>
-    <a href="{% url 'post-creat' %}">Создание постов</a><br>
-    <a href="{% url 'update-post' %}">Обновление постов</a><br>
-    <a href="{% url 'delete_post' %}">Удаление постов</a><br>
+    <a href="{% url 'contacts-view' %}">Контакты</a>
       
 {% endblock %}
