--- a/templates/posts/about.html
+++ b/templates/posts/about.html
@@ -5,7 +5,7 @@
 <h1>Страница о нас</h1>
 
 <a href="{% url 'index-page' %}">Главная</a> <br>
-<a href="{% url 'contacts-view' %}">Контакты</a>
+<a href="{% url 'contacts-page' %}">Контакты</a>
 
 {% endblock %}
 
