--- a/templates/posts/contacts.html
+++ b/templates/posts/contacts.html
@@ -4,7 +4,7 @@
 
 <h1>Контакты</h1>
 
-<a href="{% url 'about-view' %}">Страница о нас</a> <br>
+<a href="{% url 'about-page' %}">Страница о нас</a> <br>
 <a href="{% url 'index-page' %}">Главная</a>
 
 {% endblock %}
