--- a/templates/base.html
+++ b/templates/base.html
@@ -26,10 +26,10 @@
                 <a class="nav-link active" aria-current="page" href="{% url 'index-page' %}">На главную</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="{% url 'about-view' %}">О нас</a>
+                <a class="nav-link active" aria-current="page" href="{% url 'about-page' %}">О нас</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="{% url 'contacts-view' %}">Контакты</a>
+                <a class="nav-link active" aria-current="page" href="{% url 'contacts-page' %}">Контакты</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="https://getbootstrap.com/docs/5.3/getting-started/introduction/">Bootstrap</a>
