--- a/templates/posts/post_detail.html
+++ b/templates/posts/post_detail.html
@@ -1,10 +1,31 @@
 {% extends 'base.html' %}
+
 {% block content %}
 
-    <h1>Удаление постов</h1>
+    <figure class="text-center">
+        <blockquote class="blockquote">
+            <h1 class="display-6">{{ post.title }}</h1>
+        </blockquote>
+        <figcaption class="blockquote-footer">
+            {{ post.created }}
+        </figcaption>
+    </figure>
+    <p>{{ post.content }}</p>
 
-    <a href="{% url 'index-page' %}">Главная</a> <br>
-    <a href="{% url 'about-view' %}">Страница о нас</a> <br>
-    <a href="{% url 'contacts-view' %}">Контакты</a>
-      
+    <br>
+    <form action="{% url 'post-delete' post.id %}" method="get">
+    {% csrf_token %}
+    <button type="submit">Удалить пост</button>
+    <!--  не знаю правильно ли это, но это строка работает как форма редактирование!!!??? -->
+    <!-- <a href="{% url 'post-update' post.pk %}"> <button type="button">Редактировать пост</button></a><br> -->
+    </form>
+    <br>
+
+    <form action="{% url 'post-update' post.pk %}">
+    {% csrf_token %}
+    <button type="submit">Редактировать пост</button>
+    </form>
+    <br>
+    
+    {% include 'posts/includes/links_includes.html' %}
 {% endblock %}
