--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,7 @@
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
+          
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
@@ -39,11 +40,27 @@
               </li>
             </ul>
           </div>
+          <div class="d-flex">
+            <div class="p-2">
+              <a href="{% url 'login' %}">Вход</a>
+              <a href="{% url 'logout' %}">Выход</a>
+              <a href="{% url 'register' %}">Зарегистрироваться</a>
+            </div>
+          </div>
         </div>
       </nav>
     {% block content %}
-
+    
     {% endblock %}
+    <ul>
+      {% if user.is_authenticated %}
+      <li>Пользователь: {{ user.get_username }}</li>
+      <!-- <li><a href="{% url 'logout' %}">Выход</a></li> -->
+      {% else %}
+      <!-- <li><a href="{% url 'login' %}">Вход</a></li> -->
+        <!-- <li><a href="{% url 'register' %}">Зарегистрироваться</a></li> -->
+      {% endif %}
+    </ul>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
