--- a/templates/posts/post_detail.html
+++ b/templates/posts/post_detail.html
@@ -26,7 +26,7 @@
         </div><br>
     {% endfor %}
     <br>
-
+    {% if user.is_authenticated %}
     <form action="" method="post">
         {% csrf_token %}
         <!-- <input type="hidden" value="{{ post.id }}" name="post_id">
@@ -59,7 +59,9 @@
     <a href="{% url 'post-update' post.id %}">
         <button>Обновить пост</button>
     </a><br>
-
+    {% else %}
+    <p>Чтобы оставить коментарий войдите в аккаунт!</p>
+    {% endif %}
     {% include 'posts/includes/links_includes.html' %}
 
 {% endblock %}
