--- a/templates/base.html
+++ b/templates/base.html
@@ -42,9 +42,14 @@
           </div>
           <div class="d-flex">
             <div class="p-2">
-              <a href="{% url 'login' %}">Вход</a>
+              {% if user.is_authenticated %}
+              <span> Пользователь: {{ user.get_username }}</span>
               <a href="{% url 'logout' %}">Выход</a>
+              {% else %}
+              <a href="{% url 'login' %}">Вход</a>
               <a href="{% url 'register' %}">Зарегистрироваться</a>
+              {% endif %}
+
             </div>
           </div>
         </div>
